2006-01-29  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.in: Added 'ca' to ALL_LINGUAS.

2006-01-27  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" "zh_TW" to ALL_LINGUAS.

2006-01-26  Lukas Novotny  <lukasnov@cvs.gnome.org>

	* configure.in: Added cs to ALL_LINGUAS.

2006-01-22  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2006-01-08  Frederic Ruaudel <grumz@grumz.net> 

	* nact/nact.c: Fix a bug with the stock icon of the
	Edit button in Nact with GTK+2.4 (thanks to wwp for the report).

2006-01-06  Frederic Ruaudel <grumz@grumz.net> 

	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* nact/nautilus-actions-config.glade:
	* nact/nact.c: Implement Feature #325524 which allow an action to be
	duplicated to facilitate the edition of several quite same config.
	
	* nact/nact-editor.c: Fix a GTK warning about the function
	gtk_combo_box_entry_set_text_column() when opening the edit
	dialog more than once.

2005-12-28  Yair Hershkovitz  <yairhr@gmail.com>

	* configure.in: Added 'he' (Hebrew) to ALL_LINGUAS.

2005-12-26  Ilkka Tuohela <hile@iki.fi>

	* configure.in: Added 'fi' (Finnish) to ALL_LINGUAS.

2005-12-24  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS.

2005-12-20  Frederic Ruaudel <grumz@grumz.net> 

	* configure.in: Added 'vi' to ALL_LINGUAS.

	* nact/nautilus-actions-config.glade: Apply the new 
	notebook layout to fix the problem with 800x600 screen
	and fix some strings (Bugzilla bug #324593).

	* config/config_newaction.schemas.in.in:
	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
	* utils/nautilus-actions-convert.c:
	* utils/nautilus-actions-new-config.c:
	Fix some typos in strings (Bugzilla bug #324593).


2005-12-19  Ankit Patel  <ankit644@yahoo.com>

	* configure.in: Added 'gu' to ALL_LINGUAS.
