@@ -74,19 +74,19 @@
 #define ACTION_PATH_DESC_LONG			_("The path of the command to start when the user select the menu item in the Nautilus popup menu")
 #define ACTION_PARAMS_DESC_SHORT		_("The parameters of the command")
 /* i18n notes : Sorry for this long paragraph, will try to fix it the next release */
-#define ACTION_PARAMS_DESC_LONG		_("The parameters of the command to start when the user selects the menu item in the Nautilus popup menu.\n\nThe parameters can contain some special tokens which are replaced by Nautilus informations before starting the command :\n\n%d : base folder of the selected file(s)\n%f : the name of the selected file or the 1st one if many are selected\n%m : space-separated list of the basenames of the selected file(s)/folder(s)\n%M : space-separated list of the selected file(s)/folder(s), with their full paths\n%u : gnome-vfs URI\n%s : scheme of the gnome-vfs URI\n%h : hostname of the gnome-vfs URI\n%U : username of the gnome-vfs URI\n%% : a percent sign")
+#define ACTION_PARAMS_DESC_LONG		_("The parameters of the command to start when the user selects the menu item in the Nautilus popup menu.\n\nThe parameters can contain some special tokens which are replaced by Nautilus information before starting the command:\n\n%d: base folder of the selected file(s)\n%f: the name of the selected file or the first one if many are selected\n%m: space-separated list of the basenames of the selected file(s)/folder(s)\n%M: space-separated list of the selected file(s)/folder(s), with their full paths\n%u: GnomeVFS URI\n%s: scheme of the GnomeVFS URI\n%h: hostname of the GnomeVFS URI\n%U: username of the :%s/GnomeVFS URI\n%%: a percent sign")
 #define ACTION_BASENAMES_DESC_SHORT	_("The list of pattern to match the selected file(s)/folder(s)")
 #define ACTION_BASENAMES_DESC_LONG	_("A list of strings with joker '*' or '?' to match the selected file(s)/folder(s). Each selected items must match at least one of the patterns for the action to appear")
 /* i18n notes : Sorry for this long paragraph, will try to fix it in the next release */
-#define ACTION_ISFILE_ISDIR_COMBINAITION_DESC_LONG N_("Here are the valid combinations :\n\n- 'isfile' is 'true' and 'isdir' is 'false' : the selection must holds only files\n- 'isfile' is 'false' and 'isdir' is 'true' : the selection must holds only folders\n- 'isfile' is 'true' and 'isdir' is 'true' : the selection can holds both files and folders\n- 'isfile' is 'false' and 'isdir' is 'false' : invalid combination")
+#define ACTION_ISFILE_ISDIR_COMBINAITION_DESC_LONG N_("The valid combinations are:\n\nisfile=TRUE and isdir=FALSE: the selection may hold only files\nisfile=FALSE and isdir=TRUE: the selection may hold only folders\nisfile=TRUE and isdir=TRUE': the selection may hold both files and folders\nisfile=FALSE and isdir=FALSE: this is an invalid combination (your configuration will never appear)")
 #define ACTION_ISFILE_DESC_SHORT		_("'true' if the selection can have files, 'false' otherwise")
-#define ACTION_ISFILE_DESC_LONG		N_("This setting is tied with the 'isdir' setting. ") ACTION_ISFILE_ISDIR_COMBINAITION_DESC_LONG 
+#define ACTION_ISFILE_DESC_LONG		N_("This setting is tied in with the 'isdir' setting. ") ACTION_ISFILE_ISDIR_COMBINAITION_DESC_LONG 
 #define ACTION_ISDIR_DESC_SHORT		_("'true' if the selection can have folders, 'false' otherwise")
-#define ACTION_ISDIR_DESC_LONG		N_("This setting is tied with the 'isfile' setting. ") ACTION_ISFILE_ISDIR_COMBINAITION_DESC_LONG
+#define ACTION_ISDIR_DESC_LONG		N_("This setting is tied in with the 'isfile' setting. ") ACTION_ISFILE_ISDIR_COMBINAITION_DESC_LONG
 #define ACTION_MULTIPLE_DESC_SHORT	_("'true' if the selection can have several items, 'false' otherwise")
 #define ACTION_MULTIPLE_DESC_LONG	_("If you need one or more files or folders to be selected, set this key to 'true'. If you want just one file or folder, set 'false'")
 #define ACTION_SCHEMES_DESC_SHORT	_("The list of GnomeVFS schemes where the selected files should be located")
 /* i18n notes : Sorry for this long paragraph, will try to fix it in the next release */
-#define ACTION_SCHEMES_DESC_LONG		_("Defines the list of valid GnomeVFS schemes to be matched with the selected items. The GnomeVFS scheme is the protocol used to access the files. The keyword to use is the one used in the GnomeVFS URI.\n\nExample of GnomeVFS URI : \nfile:///tmp/foo.txt\nsftp:///root@test.example.net/tmp/foo.txt\n\nThe most common schemes are :\n\n'file' : local files\n'sftp' : files accessed via SSH\n'ftp' : files accessed via FTP\n'smb' : files accessed via Samba (Windows share)\n'dav' : files accessed via WebDav\n\nAll GnomeVFS schemes used by Nautilus can be used here.")
+#define ACTION_SCHEMES_DESC_LONG		_("Defines the list of valid GnomeVFS schemes to be matched against the selected items. The GnomeVFS scheme is the protocol used to access the files. The keyword to use is the one used in the GnomeVFS URI.\n\nExamples of GnomeVFS URI include: \nfile:///tmp/foo.txt\nsftp:///root@test.example.net/tmp/foo.txt\n\nThe most common schemes are:\n\n'file': local files\n'sftp': files accessed via SSH\n'ftp': files accessed via FTP\n'smb': files accessed via Samba (Windows share)\n'dav': files accessed via WebDav\n\nAll GnomeVFS schemes used by Nautilus can be used here.")
 #define ACTION_VERSION_DESC_SHORT	_("The version of the configuration format")
 #define ACTION_VERSION_DESC_LONG		_("The version of the configuration format that will be used to manage backward compatibility")
