@@ -1,3 +1,10 @@
+2006-01-31  Frederic Ruaudel <grumz@grumz.net> 
+
+	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
+	* nact/nautilus-actions-config.glade:
+	* utils/nautilus-actions-convert.c:
+	* utils/nautilus-actions-new-config.c: Fix bug #327027 (Spelling/grammar fixes)
+
 2006-01-29  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
 	* configure.in: Added 'ca' to ALL_LINGUAS.
